meu primeiro site desenolvido por mim

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 <body>
     <header> <!-- representa um grupo que seria a introdução do seu site. Pode conter alguns elementos de cabeçalho como um logo, login, form...-->
-    <nav> <!--representa uma seção da página que contém link para outras páginas ou partes do mesmo site, é uma seção de links de navegação. -->
+    <nav class= "menu"> </nav> <!--representa uma seção da página que contém link para outras páginas ou partes do mesmo site, é uma seção de links de navegação. -->
     <a href="http://mastertech.tech">Mastertech</a>
     <a href="http://facebook.com">Facebook</a>
     <a href="#">Meus contatos</a>
-    <a href="http://www.pudim.com.br">O site do pudim</a>
-</nav>
-</header>
+    <a href="http://www.pudim.com.br">O site do pudim</a>;
+    </header>
+    <img src="logo.jpg" alt="meu logo">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9ywjjWAkeL0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
 <h1>Titulo da página</h1>
 <aside> <!-- além de ser usado para a ajudar em sidebars ou menu lateral, pode ser usado para criar um conteúdo de apoio/adicional ao conteúdo principal.-->
 <h2>
@@ -31,7 +32,7 @@
        <img src="http://placekitten.com/200/300" alt="um gato pulando">
        <p>mood de segunda feira</p>
    </section> 
-   <footer> <!--rodapé de um documento, fica no final de uma página web, é usado muito p/ informações de autoria, como nome e contato do autor-->
+   <footer class="--rodapé"> <!--rodapé de um documento, fica no final de uma página web, é usado muito p/ informações de autoria, como nome e contato do autor-->
        <button>Clique aqui</button>
        <button>Clique Mesmo</button>
        <button>Clique aqui mas talvez não</button>
